fix overflowing navbar. The problem was the font-size of the about secion header being too big

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@
 	margin-bottom: 20px;
 	padding-bottom: 10px;
 	font-family: Orbitron;
-	font-size: 8rem;
+	font-size: 7rem;
 	color: white;
 	background-color: rgba(0,0,0,0.7);
 }
